2010-11-16  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added operator eca_pd - Precipitation days index per time period [request: Barbara Hennemuth]
	
2010-11-13  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sellonlatbox: fix rounding error of the last lon index [report: Mondher Chekki]

2010-11-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* ml2pl: open output stream after all error checks
	
2010-11-08  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sethalo: added support for grid units radian
	* sethalo: correct lower bound of grid bounds for negative halos (bug fix)
	* fldmean: gives wrong result for grid units radian (bug fix) [report: Pilar Ripodas]
	
2010-10-21  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Yseasstat: bug fix for datasets with time constant fields [report: Ute Merkel]
	
2010-10-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added docu for operator dv2ps
	
2010-10-13  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Cat: call vlistCompare for all input files
	
2010-09-29  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added env. CDO_FILE_SUFFIX to set the file suffix of CDO generated file names
	
2010-09-27  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Fldstat2: replaced macros FDIV and FSQRT by function calls DIV and SQRT
	
2010-09-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New module: Ydayarith (ydayadd, ydaysub, ydaymul, ydaydiv)

2010-09-17  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.6
	* Version 1.4.6 released

2010-09-07 Ralf Mueller <ralf.mueller@zmaw.de>

	* using libtool for linking (rpath)
	* include libcdi as subproject
	* eca_gsl: adjust implementation to fit definition by ECA [report: Stefan Fronzek]
	* eca_gsl: make useable in pipes (bug fix) [report: Stefan Fronzek]

2010-08-26  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sellevel: copy zaxis meta data name and units (bug fix) [report: Don Murray]
	
2010-08-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
